Rewrite the auditing features